--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,30 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
-body, html {
-  height: 100%; }
-
 #logo {
-  margin: -10px; }
+  margin-left: 5px;
+  height: 84px;
+  transition: height 0.4s; }
 
 .main-header {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background: #eee; }
 
 ul {
   display: flex;
-  padding-top: 40px;
-  padding-right: 20px;
-  list-style-type: none; }
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none;
+  padding-top: 22px; }
 
 ul li a {
   text-decoration: none;
   padding: 40px;
   color: black;
   font-size: 25px;
-  font-family: "Roboto", sans-serif; }
+  font-family: "Roboto", sans-serif;
+  transition: color 0.4s; }
 
 .link_color {
   color: #1f8dc0; }
@@ -34,6 +34,10 @@ ul li a {
 
 .GH_hover:hover {
   color: #1f8dc0; }
+
+section:nth-of-type(1) {
+  margin-top: 220px;
+  height: 80vh; }
 
 .first_section {
   background-image: url(https://pluspng.com/img-png/quotation-png-file-quote-background-transparent-png-512.png);
@@ -55,6 +59,10 @@ ul li a {
 .my_pic {
   border-radius: 30%; }
 
+.my_pic:hover, .CV_button:hover, .little_pic:hover {
+  -ms-transform: scale(1.05) translateZ(0);
+  transform: scale(1.05) translateZ(0); }
+
 .profession {
   color: #1f8dc0; }
 
@@ -71,12 +79,15 @@ ul li a {
   justify-content: center;
   width: 50%; }
 
+section:nth-of-type(2) {
+  height: 100vh; }
+
 .about_me_introduction {
   font-size: 2em;
   font-family: "Roboto", sans-serif;
   text-align: center;
   padding: 20px 0;
-  margin-top: 40px; }
+  margin-top: 120px; }
 
 .bottom_line {
   height: 3px;
@@ -90,7 +101,7 @@ ul li a {
   column-gap: 100px;
   padding: 20px; }
 
-.third_section {
+.small_pictures {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -186,4 +197,10 @@ a {
   font-size: 30px;
   padding: 14px 20px; }
 
-/*# sourceMappingURL=style.css.map */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
+section {
+  display: block; }
