--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,14 @@
- section:nth-of-type(2) {
+@import 'variables';
+
+section:nth-of-type(2) {
   height: 100vh;
  }
-.about_me_introduction {
-    font-size: 2em;
+h2 {
+    font-size: 3em;
     font-family: $font-family;
     text-align: center;
     padding: 20px 0;
-    margin-top: 120px;
+    margin-top: 40px;
   }
   .bottom_line {
     height: 3px;
@@ -16,23 +18,18 @@
     background: $color-primary;
   }
   .about_me_section {
-    column-count: 2;
-    column-gap: 100px;
-    padding: 20px;
+    text-align: center;
+    padding: 5px 10px;
   }
-  
-  .small_pictures {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 0;
+  p {
+  padding-bottom: 5px;
+  font-size: 1em;
+  font-family: $font-family;
   }
   .process {
-    display: grid;
-    grid-template-columns: repeat(2, 1.5fr);
-    grid-gap: 3rem;
     text-align: center;
   }
+  
   .skill-container {
     width:100%;
     background-color:rgb(221, 243, 252) ;
@@ -51,22 +48,67 @@
   .react{width:80%; background-color:$color-primary}
   .ts{width:50%; background-color:$color-primary}
   
+  .motivational_letter {
+    font-family: $font-family;
+    text-align: center;
+    padding: 25px 20px 0 20px;
+  }
+  .mentor_pic {
+    margin-top: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+@media only screen and (min-width: $small) and (max-width: $medium) {
+  h2 {
+    font-size: 2em;
+  }
+  .little_pic {
+    margin-top: 60px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .little_pic_1 {
+    display: none;
+  }
+}
+@media only screen and (min-width: $medium) {
+  .about_me_section {
+    column-count: 2;
+    column-gap: 100px;
+    padding: 20px;
+  }
+  p {
+    font-size: 20px;
+  }
+  .fa-file-alt, .fa-thumbs-up, .fa-desktop, .fa-users {
+    font-size: 50px;
+    padding-bottom: 15px;
+  }
+  h3 {
+    font-size: 24px;
+    padding-bottom: 10px;
+  }
+  .small_pictures {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0;
+  }
+  .process {
+    display: grid;
+    grid-template-columns: repeat(2, 1.5fr);
+    grid-gap: 3rem;
+  }
   .sixth_section {
     display: flex;
     align-items: center;
     align-content: space-between;
   }
-  
-  .motivational_letter {
-    font-family: $font-family;
-    text-align: center;
-    padding-left: 20px;
-  }
-  p {
-    font-size: 20px;
-    font-family: $font-family;
-  }
-  .mentor_words {
+  .mentor_pic {
     padding: 20px;
     margin: 20px;
   }
+}
