--- a/css/header.css
+++ b/css/header.css
@@ -1,30 +1,33 @@
+.navbar-toggle {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+  color: black;
+  font-size: 24px; }
+
 #logo {
-  margin-left: 5px;
-  height: 84px;
-  transition: height 0.4s; }
+  margin-top: 10px;
+  margin-left: 5px; }
+
+ul {
+  list-style-type: none;
+  display: none; }
+
+nav li {
+  text-align: center;
+  margin: 15px auto; }
 
 .main-header {
-  display: flex;
-  justify-content: space-between;
-  position: fixed;
   width: 100%;
   top: 0;
   background: #eee; }
 
-ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style-type: none;
-  padding-top: 22px; }
-
 ul li a {
-  text-decoration: none;
-  padding: 40px;
-  color: black;
-  font-size: 25px;
-  font-family: "Roboto", sans-serif;
-  transition: color 0.4s; }
+  font-family: "Roboto", sans-serif; }
+
+.active {
+  display: block; }
 
 .link_color {
   color: #1f8dc0; }
@@ -34,3 +37,26 @@ ul li a {
 
 .GH_hover:hover {
   color: #1f8dc0; }
+
+@media only screen and (min-width: 600px) {
+  #logo {
+    height: 100%;
+    transition: height 0.4s; }
+  .main-header {
+    display: flex;
+    justify-content: space-between;
+    position: fixed; }
+  ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+    padding-top: 22px; }
+  ul li a {
+    text-decoration: none;
+    padding: 40px;
+    color: black;
+    font-size: 25px;
+    transition: color 0.4s; }
+  .navbar-toggle {
+    display: none; } }
