--- a/css/footer.css
+++ b/css/footer.css
@@ -1,34 +1,20 @@
-#main-footer {
+footer {
   background-color: #ddf3fc;
   width: 100%;
   margin: 0;
-  padding: 0;
-  height: 5rem; }
-
-.footer-content {
-  display: flex;
-  justify-content: space-between;
-  height: 5rem;
-  align-items: center; }
-
-.container {
-  max-width: 1280px;
-  padding: 0 1.5rem;
-  margin: auto;
-  overflow: hidden; }
-
-a {
-  text-decoration: none;
-  color: black;
-  font-size: 3vh;
-  padding: 14px 20px; }
-
-.copyright {
-  font-family: "Roboto", sans-serif; }
-
-@media only screen and (min-width: 300px) and (max-width: 600px) {
-  .social {
-    display: none; }
-  .copyright {
-    font-size: 2vh;
-    text-align: center; } }
+  padding: 0; }
+  footer div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    footer div p {
+      font-size: 1.5vh;
+      font-family: "Roboto", sans-serif;
+      padding-left: 10px; }
+    footer div div {
+      padding-right: 80px; }
+      footer div div a {
+        text-decoration: none;
+        color: black;
+        font-size: 2vh;
+        padding: 14px 20px; }
