--- a/css/main.css
+++ b/css/main.css
@@ -1,125 +1,139 @@
 section:nth-of-type(2) {
   height: 100vh; }
+  section:nth-of-type(2) div h2 {
+    font-size: 2em;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 40px; }
+  section:nth-of-type(2) div span {
+    height: 3px;
+    width: 4rem;
+    display: block;
+    margin: 0 auto 1rem auto;
+    background: #1f8dc0; }
+  section:nth-of-type(2) div div {
+    text-align: center;
+    padding: 5px 10px; }
+  section:nth-of-type(2) div p {
+    padding-bottom: 5px;
+    font-size: 1em;
+    font-family: "Roboto", sans-serif; }
+  section:nth-of-type(2) img {
+    margin-top: 60px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+  section:nth-of-type(2) .little_pic {
+    display: none; }
 
-h2 {
-  font-size: 3em;
+section:nth-of-type(3) div h2 {
+  font-size: 2em;
   font-family: "Roboto", sans-serif;
   text-align: center;
   padding: 20px 0;
   margin-top: 40px; }
 
-.bottom_line {
+section:nth-of-type(3) div span {
   height: 3px;
   width: 4rem;
   display: block;
   margin: 0 auto 1rem auto;
   background: #1f8dc0; }
 
-.about_me_section {
+section:nth-of-type(3) div div {
   text-align: center;
-  padding: 5px 10px; }
+  padding: 5px;
+  margin-top: 10px; }
 
-p {
-  padding-bottom: 5px;
-  font-size: 1em;
-  font-family: "Roboto", sans-serif; }
-
-.process {
-  text-align: center; }
-
-#myProgress {
+section:nth-of-type(3) .progress {
   width: 100%; }
+  section:nth-of-type(3) .progress p {
+    margin-left: 20px; }
+  section:nth-of-type(3) .progress div {
+    width: 98%;
+    margin: auto;
+    background-color: #ddf3fc; }
+    section:nth-of-type(3) .progress div div {
+      text-align: right;
+      padding: 10px 10px 10px 0;
+      color: black;
+      font-size: 20px; }
+    section:nth-of-type(3) .progress div .html {
+      width: 100%;
+      background-color: #1f8dc0; }
+    section:nth-of-type(3) .progress div .css {
+      width: 100%;
+      background-color: #1f8dc0; }
+    section:nth-of-type(3) .progress div .rwd {
+      width: 100%;
+      background-color: #1f8dc0; }
+    section:nth-of-type(3) .progress div .js {
+      width: 80%;
+      background-color: #1f8dc0; }
+    section:nth-of-type(3) .progress div .sass {
+      width: 100%;
+      background-color: #1f8dc0; }
+    section:nth-of-type(3) .progress div .react {
+      width: 80%;
+      background-color: #1f8dc0; }
+    section:nth-of-type(3) .progress div .ts {
+      width: 50%;
+      background-color: #1f8dc0; }
 
-#myProgress p {
-  margin-left: 20px; }
-
-.skill-container {
-  width: 98%;
-  margin: auto;
-  background-color: #ddf3fc; }
-
-.skills {
-  text-align: right;
-  padding: 10px 10px 10px 0;
-  color: black;
-  font-size: 20px; }
-
-.html {
-  width: 100%;
-  background-color: #1f8dc0; }
-
-.css {
-  width: 90%;
-  background-color: #1f8dc0; }
-
-.rwd {
-  width: 100%;
-  background-color: #1f8dc0; }
-
-.js {
-  width: 80%;
-  background-color: #1f8dc0; }
-
-.sass {
-  width: 80%;
-  background-color: #1f8dc0; }
-
-.react {
-  width: 80%;
-  background-color: #1f8dc0; }
-
-.ts {
-  width: 50%;
-  background-color: #1f8dc0; }
-
-.motivational_letter {
+section:nth-of-type(3) div .motivational_letter {
   font-family: "Roboto", sans-serif;
   text-align: center;
   padding: 25px 20px 0 20px; }
 
-.mentor_pic {
-  margin-top: 10px;
-  display: block;
+section:nth-of-type(3) div img {
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto; }
 
-@media only screen and (min-width: 300px) and (max-width: 600px) {
-  h2 {
-    font-size: 2em; }
-  .little_pic {
-    margin-top: 60px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto; }
-  .little_pic_1 {
-    display: none; } }
-
 @media only screen and (min-width: 600px) {
-  .about_me_section {
-    column-count: 2;
-    column-gap: 100px;
-    padding: 20px; }
-  p {
-    font-size: 20px; }
-  .fa-file-alt, .fa-thumbs-up, .fa-desktop, .fa-users {
-    font-size: 50px;
-    padding-bottom: 15px; }
-  h3 {
-    font-size: 24px;
-    padding-bottom: 10px; }
-  .small_pictures {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 0; }
-  .process {
-    display: grid;
-    grid-template-columns: repeat(2, 1.5fr);
-    grid-gap: 3rem; }
-  .sixth_section {
+  section:nth-of-type(2) div {
+    display: block;
+    padding: 25px; }
+    section:nth-of-type(2) div h2 {
+      font-size: 2em;
+      font-family: "Roboto", sans-serif;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 40px; }
+    section:nth-of-type(2) div span {
+      height: 3px;
+      width: 4rem;
+      display: block;
+      margin: 0 auto 1rem auto;
+      background: #1f8dc0; }
+    section:nth-of-type(2) div div {
+      column-count: 2;
+      column-gap: 100px;
+      padding: 20px; }
+    section:nth-of-type(2) div p {
+      font-size: 20px; }
+  section:nth-of-type(3) div {
+    display: block; }
+    section:nth-of-type(3) div div {
+      display: grid;
+      grid-template-columns: repeat(2, 1.5fr);
+      grid-gap: 3rem; }
+      section:nth-of-type(3) div div div {
+        display: block; }
+        section:nth-of-type(3) div div div i {
+          font-size: 50px;
+          padding-bottom: 15px; }
+        section:nth-of-type(3) div div div h3 {
+          font-size: 24px;
+          padding-bottom: 10px; }
+        section:nth-of-type(3) div div div p {
+          font-size: 20px;
+          font-family: "Roboto", sans-serif; }
+  section:nth-of-type(3) .last_section {
     display: flex;
     align-items: center;
     align-content: space-between; }
-  .mentor_pic {
-    padding: 20px;
-    margin: 20px; } }
+    section:nth-of-type(3) .last_section p {
+      font-size: 20px;
+      font-family: "Roboto", sans-serif; } }
