--- a/css/main_section.css
+++ b/css/main_section.css
@@ -67,18 +67,18 @@ section .my_pic {
       background-repeat: no-repeat;
       font-size: 3em;
       letter-spacing: 0.03em;
-      display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      line-height: 120%; }
+      line-height: 120%;
+      display: flex;
+      justify-content: center; }
       section div h1 a {
         margin: 10px;
         padding: 6px;
         font-size: 25px;
+        width: 50%;
         display: flex;
-        justify-content: center;
-        width: 50%; }
+        justify-content: center; }
   section .my_pic {
     width: 35%;
     margin: auto 10px; } }
