--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,121 +1,183 @@
 @import 'variables';
-
+@mixin style_h2 {
+  font-size: 2em;
+  font-family: $font-family;
+  text-align: center;
+  padding: 20px 0;
+  margin-top: 40px;
+}
+@mixin span_line {
+      height: 3px;
+      width: 4rem;
+      display: block;
+      margin: 0 auto 1rem auto;
+      background: $color-primary;
+}
+@mixin  progress1 {
+  width:100%; 
+  background-color:$color-primary;
+}
+@mixin progress2 {
+  width:80%; 
+  background-color:$color-primary;
+}
 section:nth-of-type(2) {
   height: 100vh;
- }
-h2 {
-    font-size: 3em;
-    font-family: $font-family;
-    text-align: center;
-    padding: 20px 0;
-    margin-top: 40px;
+  div {
+    h2 {
+     @include style_h2;
+    }
+    span {
+      @include span_line;
+      }
+    div {
+      text-align: center;
+      padding: 5px 10px;
+    }
+    p {
+      padding-bottom: 5px;
+      font: {
+        size: 1em;
+        family: $font-family;
+      }
+    }  
   }
-  .bottom_line {
-    height: 3px;
-    width: 4rem;
-    display: block;
-    margin: 0 auto 1rem auto;
-    background: $color-primary;
-  }
-  .about_me_section {
-    text-align: center;
-    padding: 5px 10px;
-  }
-  p {
-  padding-bottom: 5px;
-  font-size: 1em;
-  font-family: $font-family;
-  }
-  .process {
-    text-align: center;
-  }
-  #myProgress {
-    width: 100%;
-  }
-   #myProgress p {
-    margin-left: 20px;
-    
-  }
-  .skill-container {
-    width:98%;
-    margin: auto;
-    background-color:rgb(221, 243, 252) ;
-  }
-  .skills {
-    text-align: right;
-    padding: 10px 10px 10px 0;
-    color: black;
-    font-size: 20px;
-  }
-  .html{width:100%; background-color:$color-primary;}   
-  .css{width:90%; background-color:$color-primary}
-  .rwd{width:100%; background-color:$color-primary}
-  .js{width:80%; background-color:$color-primary}
-  .sass{width:80%; background-color:$color-primary}
-  .react{width:80%; background-color:$color-primary}
-  .ts{width:50%; background-color:$color-primary}
-  
-  .motivational_letter {
-    font-family: $font-family;
-    text-align: center;
-    padding: 25px 20px 0 20px;
-  }
-  .mentor_pic {
-    margin-top: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-@media only screen and (min-width: $small) and (max-width: $medium) {
-  h2 {
-    font-size: 2em;
-  }
-  .little_pic {
+   img {
     margin-top: 60px;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
-  .little_pic_1 {
+  .little_pic {
     display: none;
   }
 }
-@media only screen and (min-width: $medium) {
-  .about_me_section {
-    column-count: 2;
-    column-gap: 100px;
-    padding: 20px;
+section:nth-of-type(3) {
+  div {
+    h2 {
+      @include style_h2;
+    }
+    span {
+      @include span_line;
+    }
+    div {
+      text-align: center;
+      padding: 5px;
+      margin-top: 10px;
+    }
   }
+ 
+  .progress {
+    width: 100%;
   p {
-    font-size: 20px;
+    margin-left: 20px;
   }
-  .fa-file-alt, .fa-thumbs-up, .fa-desktop, .fa-users {
-    font-size: 50px;
-    padding-bottom: 15px;
+  div {
+    width:98%;
+    margin: auto;
+    background-color:rgb(221, 243, 252);
+    div {
+      text-align: right;
+      padding: 10px 10px 10px 0;
+      color: black;
+      font-size: 20px;
+      
+    } .html {
+      @include progress1;
+    }
+    .css {
+      @include progress1;
+    }
+    .rwd {
+      @include progress1;
+    }
+    .js {
+      @include progress2;
+    }
+    .sass {
+      @include progress1;
+    }
+    .react {
+      @include progress2;
+    }
+    .ts {
+      width:50%; 
+      background-color:$color-primary;
+      }
+    }
+  } 
+
+  div {
+      .motivational_letter {
+        font-family: $font-family;
+        text-align: center;
+        padding: 25px 20px 0 20px;
+    } img {
+      margin: {
+        top: 20px;
+        left: auto;
+        right: auto;
+      }
+    }
   }
-  h3 {
-    font-size: 24px;
-    padding-bottom: 10px;
-  }
-  .small_pictures {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 0;
-  }
-  .process {
+}
+
+@media only screen and (min-width: $medium) {
+  section:nth-of-type(2) {
+      div {
+        display: block;
+        padding: 25px;
+        h2 {
+          @include style_h2;
+        }
+        span {
+          @include span_line;
+        }
+        div {
+          column-count: 2;
+          column-gap: 100px;
+          padding: 20px;
+        }
+        p {
+          font-size: 20px;
+        }
+      } 
+    }
+    section:nth-of-type(3) {
+div { 
+display: block;
+  div {
     display: grid;
     grid-template-columns: repeat(2, 1.5fr);
     grid-gap: 3rem;
-  }
-  .sixth_section {
-    display: flex;
-    align-items: center;
-    align-content: space-between;
-  }
-  .mentor_pic {
-    padding: 20px;
-    margin: 20px;
+    div {
+      display: block;
+      i {
+        font-size: 50px;
+        padding-bottom: 15px;
+      }
+      h3 {
+        font-size: 24px;
+        padding-bottom: 10px;
+      }
+      p {
+        font-size: 20px;
+        font-family: $font-family;
+      }
+    }
   }
 }
+
+.last_section {
+  display: flex;
+  align-items: center;
+  align-content: space-between;
+  p {
+    font-size: 20px;
+    font-family: $font-family;
+  }
+  }
+} 
+}
+ 
+
