--- a/sass/main_section.scss
+++ b/sass/main_section.scss
@@ -3,6 +3,10 @@
   -ms-transform: scale(1.05) translateZ(0);
   transform: scale(1.05) translateZ(0);
 }
+@mixin flex_display{
+  display: flex;
+  justify-content: center;
+}
 section:nth-of-type(1) {
   margin-top: 120px;
   height: 100vh;
@@ -86,18 +90,16 @@ section {
           background-repeat: no-repeat;
           font-size: 3em;
           letter-spacing: 0.03em;
-          display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center;
           line-height: 120%;
+          @include flex_display;
           a {
             margin: 10px;
             padding: 6px;
             font-size: 25px;
-            display: flex;
-            justify-content: center;
             width: 50%;
+            @include flex_display;
           }    
       } 
     }.my_pic {
