small changes in nav and about me section

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import 'variables';
  @import 'nav';
- @import 'aboutMe';
- @import 'aboutMe2';
+ @import 'about';
+ @import 'main';
  @import 'footer';
 
  * {
