--- a/css/about.css
+++ b/css/about.css
@@ -66,5 +66,4 @@ img#my_pic {
         flex-direction: column;
         font-size: 55px; }
       section:nth-of-type(1) div#about_ img#my_pic {
-        width: 50%;
-        display: block; } }
+        width: 50%; } }
