--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,9 @@ nav .GH_hover {
 
 section:nth-of-type(1) {
   height: 100vh;
-  margin-top: 80px; }
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 #myBtn {
   display: none;
@@ -97,7 +99,7 @@ div.intro {
 
 img#my_pic {
   border-radius: 30%;
-  width: 50%;
+  width: 70%;
   margin: 70px auto;
   display: block; }
   img#my_pic:hover {
@@ -105,17 +107,17 @@ img#my_pic {
     transform: scale(1.05) translateZ(0); }
 
 @media only screen and (min-width: 600px) {
-  div#about_ {
-    display: flex;
+  section:nth-of-type(1) {
     justify-content: space-around; }
-    div#about_ div.intro {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      font-size: 55px; }
-    div#about_ img#my_pic {
-      width: 30%;
-      margin: auto 10px; } }
+    section:nth-of-type(1) div#about_ {
+      display: flex; }
+      section:nth-of-type(1) div#about_ div.intro {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        font-size: 55px; }
+      section:nth-of-type(1) div#about_ img#my_pic {
+        width: 50%; } }
 
 footer {
   background-color: #ddf3fc;
