--- a/sass/about.scss
+++ b/sass/about.scss
@@ -9,7 +9,8 @@
   }
   section:nth-of-type(1) {
       height: 100vh;
-      margin-top: 80px;
+     @include flex_display;
+     align-items: center;
   }
   #myBtn {
     display: none;
@@ -61,7 +62,7 @@
     }
     img#my_pic {
             border-radius: 30%;
-            width: 50%;
+            width: 70%;
             margin: 70px auto;
             display: block;
             &:hover {
@@ -69,18 +70,20 @@
             }
         }
         @media only screen and (min-width: $medium) {
+          section:nth-of-type(1) {
+            justify-content: space-around;
             div#about_ {
-                display: flex;
-                justify-content: space-around;
-                div.intro {
-               display: flex;
-               flex-direction: column;
-               justify-content: center;
-                font-size: 55px;
-                }
-                img#my_pic {
-                    width: 30%;
-                 margin: auto 10px;
-                }
-            }
+              display: flex;  
+              div.intro {
+                @include flex_display;
+                 flex-direction: column;
+                 font-size: 55px;
+                 }
+              img#my_pic {
+              width: 50%;
+              }
+            } 
+          }
         }
+    
+     
