--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 section:nth-of-type(2) {
 margin: -50px 10px 20px 10px;
 }
@@ -6,7 +8,7 @@ h2 {
     font-size: 30px;
 }
 span.line {
-    background-color: blue;
+    background-color: $color-primary;
     width: 4rem;
     height: 3px;
     display: block;
@@ -21,7 +23,10 @@ div.description {
 img.little_pic {
     display: block;
     margin: 20px auto;
-    
+    &:hover {  
+        -ms-transform: scale(1.05) translateZ(0);
+        transform: scale(1.05) translateZ(0);
+    }
 }
 section:nth-of-type(3) {
     margin: 20px 10px;
@@ -33,25 +38,59 @@ div.my_rules {
 h3 {
     font-size: 20px;
 }
+div.progress {
+   p {
+        border-radius: 15px;
+       background-color:$color-primary;
+       color: white;
+        text-align: center;
+        display: table-cell;
+        vertical-align: middle;
+        width: 120px;
+        height: 100px;
+   }
+}
+div.last_section {
+    text-align: center;
+    margin: 10px;
+    padding: 10px 0;
+    img.mentor {
+        margin-top: 20px;
+    }
+}
 
 @media only screen and (min-width: $medium) {
-    section:nth-of-type(2) {
-    }
     h2 {
         font-size: 35px;
     }
+    h3 {
+        font-size: 25px;
+      
+    }
+    p {
+        font-size: 20px;
+    }
     div#aboutMe {
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
-    img.little_pic {
-  display: inline;
-  text-align: center;
+    div.pictures {
+        display: flex;
     }
-
-    section:nth-of-type(3) {
+    div.progress{
+        p:hover {
+        -ms-transform: scale(1.05) translateZ(0);
+        transform: scale(1.05) translateZ(0);
+        }
     }
     div.last_section {
         display: flex;
+       justify-content: space-around;
+       align-items: center;
+       p {
+           font-size: 20px;
+       }
     }
-    
 }
