--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 section:nth-of-type(2) {
-  margin: -50px 10px 20px 10px; }
+  margin: -40px 10px 20px 10px; }
 
 h2 {
   text-align: center;
   font-size: 30px; }
+
+h2:first-of-type {
+  margin-top: 10px; }
 
 span.line {
   background-color: #1f8dc0;
