--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,11 +4,14 @@
     transform: scale(1.05) translateZ(0);
   }
 section:nth-of-type(2) {
-margin: -50px 10px 20px 10px;
+margin: -40px 10px 20px 10px;
 }
 h2 {
     text-align: center;
     font-size: 30px;
+}
+h2:first-of-type {
+    margin-top: 10px;
 }
 span.line {
     background-color: $color-primary;
